force-app/main/default/objects/Apttus__Agreement_Term_Exception__c/Apttus__Agreement_Term_Exception__c.object-meta.xml
<CustomObject>
    <description>Term Exceptions associated with a given Agreement</description>
    <label>Agreement Term Exception</label>
    <nameField>
        <displayFormat>ATE-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Term Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>