force-app/main/default/objects/Apttus__Agreement_Term_Exception__c/fields/Apttus__Agreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Agreement__c</fullName>
    <description>Associated Agreement</description>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Term Exceptions</relationshipLabel>
    <relationshipName>R00N50000001qROLEA2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>