force-app/main/default/objects/Apttus__Agreement_Term_Exception__c/fields/Apttus__AgreementClauseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementClauseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated agreement clause</description>
    <label>Agreement Clause</label>
    <referenceTo>Apttus__Agreement_Clause__c</referenceTo>
    <relationshipLabel>Agreement Term Exceptions</relationshipLabel>
    <relationshipName>AgreementTermExceptions</relationshipName>
    <type>Lookup</type>
</CustomField>