force-app/main/default/objects/Apttus__Agreement_Term_Exception__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <label>Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>