force-app/main/default/objects/Apttus__Agreement_Term_Exception__c/fields/Apttus__Exception_Name__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Exception_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference/Link to the corresponding record in the Term Exception master table.</description>
    <label>Exception Name</label>
    <referenceTo>Apttus__Term_Exception__c</referenceTo>
    <relationshipLabel>Agreement Term Exceptions</relationshipLabel>
    <relationshipName>Master_Term_Exception</relationshipName>
    <type>Lookup</type>
</CustomField>